--- a/edu/src/main/webapp/member.html
+++ b/edu/src/main/webapp/member.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h3>회원 정보</h3>
-    <form action="queryTest" method="GET">
+    <form action="queryTest2" method="POST">
         ID : <input type="text" name="id" /><br>
         Password : <input type="password" name="pwd" /> <br>
         Name : <input type="text" name="name" /><br>
@@ -18,7 +18,7 @@
         Gender :
             <input type="radio" name="gender" value="male">남자
             <input type="radio" name="gender" value="female">여자 <br>
-        Reliegion :
+        Religion :
             <select name="religion">
                 <option value="Christian">기독교</option>
                 <option value="Buddhism">불교</option>
